deploy/base/onlyoffice-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: onlyoffice
  namespace: notes
spec:
  replicas: 1
  selector:
    matchLabels:
      app: onlyoffice
  template:
    metadata:
      labels:
        app: onlyoffice
    spec:
      containers:
        - name: onlyoffice
          image: onlyoffice/documentserver:8.1.1
          imagePullPolicy: IfNotPresent
          command:
            - /bin/sh
            - -c
          args:
            - |
              [...]
          ports:
            - containerPort: 80
          resources:
            requests:
              cpu: 250m
              memory: 1Gi
            limits:
              cpu: 1000m
              memory: 4Gi
