deploy/base/onlyoffice-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: onlyoffice
  namespace: notes
spec:
  selector:
    app: onlyoffice
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
