deploy/base/onlyoffice-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: onlyoffice
  namespace: notes
spec:
  ingressClassName: public
  rules:
    - host: docs.172.17.93.185.nip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: onlyoffice
                port:
                  number: 80
